--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -105,6 +105,7 @@ deny 2001:910:1400:107::2;
 deny 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:3514::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -667,6 +668,9 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:22d0::1;
+deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
