--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -91,7 +91,6 @@ allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
-allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -121,7 +120,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 113.20.31.38;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -932,7 +930,6 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
-allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -1107,7 +1104,6 @@ allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -1620,6 +1616,7 @@ allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
 allow 2a0e:bfc0:0:f::e538;
+allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
@@ -1744,7 +1741,6 @@ allow 45.138.16.42;
 allow 45.138.16.76;
 allow 45.138.87.142;
 allow 45.139.50.202;
-allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1805,6 +1801,7 @@ allow 45.84.107.76;
 allow 45.84.107.97;
 allow 45.90.185.79;
 allow 45.9.148.50;
+allow 45.9.156.13;
 allow 45.9.168.108;
 allow 45.9.168.113;
 allow 45.9.168.22;
@@ -1941,6 +1938,7 @@ allow 88.80.26.4;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
+allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.221.217.206;
 allow 89.234.157.254;
