--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -194,7 +194,6 @@ allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -706,6 +705,7 @@ allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
 allow 2a0e:bfc0:0:f::e538;
+allow 2a0e:bfc7:0:2::46e2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
