--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -91,7 +91,6 @@ set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
-set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
@@ -121,7 +120,6 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
-set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
@@ -932,7 +930,6 @@ set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
-set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.118.31;
@@ -1107,7 +1104,6 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -1620,6 +1616,7 @@ set_real_ip_from 2a0e:bfc0:0:8::a84e;
 set_real_ip_from 2a0e:bfc0:0:d::d927;
 set_real_ip_from 2a0e:bfc0:0:e::7dc2;
 set_real_ip_from 2a0e:bfc0:0:f::e538;
+set_real_ip_from 2a0e:bfc7:0:2::46e2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
@@ -1744,7 +1741,6 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.138.87.142;
 set_real_ip_from 45.139.50.202;
-set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1805,6 +1801,7 @@ set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.90.185.79;
 set_real_ip_from 45.9.148.50;
+set_real_ip_from 45.9.156.13;
 set_real_ip_from 45.9.168.108;
 set_real_ip_from 45.9.168.113;
 set_real_ip_from 45.9.168.22;
@@ -1941,6 +1938,7 @@ set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
+set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.221.217.206;
 set_real_ip_from 89.234.157.254;
