--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -820,7 +820,7 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 allow 2001:ac8:22:43::20e5:a7d7;
-allow 2001:b011:4006:3514::b;
+allow 2001:b011:4006:7da7::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
@@ -1913,7 +1913,6 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
-allow 83.229.67.22;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
