--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -105,7 +105,7 @@ deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 deny 2001:ac8:22:43::20e5:a7d7;
-deny 2001:b011:4006:3514::b;
+deny 2001:b011:4006:7da7::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
