--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -542,7 +542,6 @@ allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
-allow 185.40.4.121;
 allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
@@ -950,6 +949,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1271,6 +1271,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1333,14 +1334,12 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1808,6 +1807,7 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1833,7 +1833,6 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1909,7 +1908,6 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1931,6 +1929,7 @@ allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.147.108.90;
 allow 89.147.110.118;
+allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.221.217.206;
