--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -542,7 +542,6 @@ deny 185.38.175.133;
 deny 185.39.207.83;
 deny 185.40.4.100;
 deny 185.40.4.101;
-deny 185.40.4.121;
 deny 185.40.4.127;
 deny 185.40.4.132;
 deny 185.40.4.149;
@@ -950,6 +949,7 @@ deny 209.141.40.68;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
+deny 209.141.51.180;
 deny 209.141.54.203;
 deny 209.141.54.218;
 deny 209.141.55.26;
@@ -1271,6 +1271,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1333,14 +1334,12 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1808,6 +1807,7 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1833,7 +1833,6 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1909,7 +1908,6 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
@@ -1931,6 +1929,7 @@ deny 88.80.26.3;
 deny 88.80.26.4;
 deny 89.147.108.90;
 deny 89.147.110.118;
+deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
 deny 89.221.217.206;
