--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -367,6 +367,7 @@ set_real_ip_from 2a02:4780:c:b915::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
+set_real_ip_from 2a02:c205:3001:7714::3;
 set_real_ip_from 2a02:c206:2240:3516::1;
 set_real_ip_from 2a02:c206:2240:5051::1;
 set_real_ip_from 2a02:c206:2240:5054::1;
