--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -239,6 +239,7 @@ allow 177.149.154.91;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
+allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
@@ -1255,6 +1256,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
+allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
@@ -1339,7 +1341,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1838,7 +1839,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
