--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -239,6 +239,7 @@ deny 177.149.154.91;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.170.23;
+deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.209;
@@ -1255,6 +1256,7 @@ deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
+deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
@@ -1339,7 +1341,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1838,7 +1839,6 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
