--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,6 +104,7 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
@@ -124,6 +125,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 121.127.37.151;
@@ -737,7 +739,6 @@ set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
-set_real_ip_from 2001:41d0:304:200::83a5;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:304:200::a520;
 set_real_ip_from 2001:41d0:304:300::5bb5;
@@ -835,10 +836,12 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b0:25b:f700:82c6:bb33:9354:74c1;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:d5b3::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
+set_real_ip_from 203.159.90.181;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -1844,7 +1847,6 @@ set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.68.189.231;
-set_real_ip_from 51.75.201.67;
 set_real_ip_from 51.75.206.16;
 set_real_ip_from 51.79.24.181;
 set_real_ip_from 51.79.30.185;
